--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=patient-service
 server.port=8083
+spring.config.import=optional:configserver:http://localhost:9999
+
+
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/Patient
 spring.datasource.username=postgres
@@ -9,6 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.cloud.config.enabled=false
+spring.cloud.config.enabled=true
 spring.cloud.config.discovery.enabled=true
 eureka.instance.prefer-ip-address=true
