--- a/rendez-vous/src/main/resources/application.properties
+++ b/rendez-vous/src/main/resources/application.properties
@@ -1,15 +1,3 @@
 spring.application.name=rendez-vous
-
 server.port=8082
-spring.datasource.url=jdbc:postgresql://localhost:5432/rdv
-spring.datasource.username=postgres
-spring.datasource.password=psplus14
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-spring.cloud.config.enabled=false
-
-spring.cloud.config.discovery.enabled=true
-eureka.instance.prefer-ip-address=true
+spring.config.import=optional:configserver:http://localhost:9999
