--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -2,11 +2,9 @@ spring.application.name=patient-service
 server.port=8083
 spring.config.import=optional:configserver:http://localhost:9999
 
-
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/Patient
 spring.datasource.username=postgres
-spring.datasource.password=psplus14
+spring.datasource.password=mohamed123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
