--- a/medecin-disponibilite/src/main/resources/application.properties
+++ b/medecin-disponibilite/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=medecin-disponibilite
 server.port=8081
 spring.config.import=optional:configserver:http://localhost:9999
+management.endpoints.web.exposure.include= prometheus
 
 
 
