--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.cloud.config.enabled=true
 spring.cloud.config.discovery.enabled=true
 eureka.instance.prefer-ip-address=true
+management.endpoints.web.exposure.include= prometheus
